style for first screen, bg for content

--- a/assets/sass/core/_variables.scss
+++ b/assets/sass/core/_variables.scss
@@ -6,9 +6,10 @@ $color_black: #000000 !default;
 $button_border_radius: 3px !default;
 $button_box_shadow: 0px 2px 15px rgba(89, 137, 246, 0.4);
 $button_bg_color: #5989F7;
-$button_hover_bg_color: lighten($button_bg_color, 5%);
+$button_hover_bg_color: lighten($button_bg_color, 7%);
 $dropdown_box_shadow: 0px 4px 15px rgba(0, 0, 0, 0.08);
 $light_text_color: #ADADAD;
+$animation_speed: 1s;
 
 // BRAND
 $themeColorOne: #160F3C;
