--- a/assets/sass/blocks/_header.scss
+++ b/assets/sass/blocks/_header.scss
@@ -1,6 +1,6 @@
 .header {
   background: $themeColorOne;
-  padding: 20% 0 15px;
+  padding: 40px 0 15px;
   position: fixed;
   right: -200%;
   top: 0;
@@ -91,7 +91,7 @@
       }
 
       &:active {
-        transform: scale(0.9);
+        transform: scale(0.95);
       }
     }
 
