--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -23,7 +23,7 @@ Tags: one-column, two-columns, full-width-template, e-commerce
 
 // PLUG-INs
 //@import "plugins/font-awesome/font-awesome";
-//@import "plugins/animate-plugin";
+@import "plugins/animate-plugin";
 @import "plugins/plug-ins";
 @import "plugins/slick";
 
