fixed style, style for block services

--- a/assets/sass/blocks/_header.scss
+++ b/assets/sass/blocks/_header.scss
@@ -122,6 +122,8 @@
 
 
 .mobile-nav {
+  background: $color_white;
+  box-shadow: $light_box_shadow;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -131,7 +133,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 900;
 
   & .logo {
     &-link {
