--- a/assets/sass/core/_variables.scss
+++ b/assets/sass/core/_variables.scss
@@ -9,6 +9,7 @@ $button_bg_color: #5989F7;
 $button_hover_bg_color: lighten($button_bg_color, 7%);
 $dropdown_box_shadow: 0px 4px 15px rgba(0, 0, 0, 0.08);
 $light_text_color: #ADADAD;
+$light_box_shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
 $animation_speed: 1s;
 
 // BRAND
