--- a/assets/sass/pages/_home-page.scss
+++ b/assets/sass/pages/_home-page.scss
@@ -83,7 +83,167 @@
 }
 
 .content {
-  background: url("/wp-content/themes/brainworks/assets/img/test.svg") no-repeat top/ cover;
+  background: url("/wp-content/themes/brainworks/assets/img/conten_bg.svg") no-repeat top/ cover;
   width: 100%;
   height: 2000px;
+
+  &__button {
+    color: $themeColorOne;
+    background: transparent;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    box-sizing: border-box;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    position: relative;
+    left: 0;
+    top: - 50px;
+    @extend %smooth_animation;
+
+    &:hover {
+      @extend %smooth_animation;
+      color: $themeColorTwo;
+    }
+
+    &:hover .content__arrow {
+      @extend %smooth_animation;
+      fill: $themeColorTwo;
+    }
+  }
+
+  &__arrow {
+    display: block;
+    width: 8px;
+    height: 10px;
+    margin-left: 3px;
+    fill: $themeColorOne;
+    @extend %smooth_animation;
+  }
+
+  &__wrapper {
+    padding-top: 5%;
+  }
+}
+
+.services {
+  width: 100%;
+  height: 100Vh;
+  padding-top: 5%;
+
+  &__wrapper {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
+    width: auto;
+  }
+
+  &__icon-wrapper {
+    width: 50px;
+    height: 50px;
+    margin-bottom: 15px;
+  }
+
+  &__icon {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+
+  &__item-wrapper {
+    width: 100%;
+    padding: 0 15px;
+    margin-bottom: 30px;
+  }
+
+  &__item {
+    box-shadow: $light_box_shadow;
+    background: $color_white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 160px;
+    overflow: hidden;
+  }
+
+  &__top-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 7%;
+  }
+
+  &__description {
+    font-size: 15px;
+    line-height: normal;
+    text-align: center;
+  }
+
+  &__title {
+    position: relative;
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (min-width: 575px) {
+  .services {
+    &__item-wrapper {
+      width: 50%;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .services {
+    &__item-wrapper {
+      width: 33.33333%;
+    }
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .services {
+    &__item-wrapper {
+      width: 25%;
+    }
+
+    &__top-section {
+      flex-direction: row;
+      justify-content: flex-start;
+    }
+
+    &__title {
+      margin-bottom: 0;
+    }
+
+    &__description {
+      margin-left: 45px;
+      max-width: 75%;
+      text-align: left;
+    }
+  }
+}
+
+@media screen and (min-width: 1355px) {
+  .services {
+    &__title {
+      &:before {
+        content: '';
+        width: 150px;
+        height: 2px;
+        background: $themeColorTwo;
+        position: absolute;
+        transform: translateY(-50%);
+        top: 50%;
+        left: -180px;
+      }
+    }
+  }
 }
