--- a/assets/sass/core/_variables.scss
+++ b/assets/sass/core/_variables.scss
@@ -11,6 +11,8 @@ $dropdown_box_shadow: 0px 4px 15px rgba(0, 0, 0, 0.08);
 $light_text_color: #ADADAD;
 $light_box_shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
 $animation_speed: 1s;
+$cases_box_shadow: 0 5px 20px 2px rgba(89, 137, 246, 0.25);
+$arrow_box_shadow: 0px 10px 40px rgba(89, 137, 246, 0.25);
 
 // BRAND
 $themeColorOne: #160F3C;
