--- a/assets/sass/pages/_home-page.scss
+++ b/assets/sass/pages/_home-page.scss
@@ -130,7 +130,6 @@
 
 .services {
   width: 100%;
-  height: 100Vh;
   padding-top: 5%;
 
   &__wrapper {
@@ -245,5 +244,128 @@
         left: -180px;
       }
     }
+  }
+}
+
+.main-title {
+  margin: 20px 0 35px;
+  position: relative;
+  text-align: center;
+}
+
+@media screen and (min-width: 1355px) {
+  .main-title {
+    text-align: left;
+
+    &:before {
+      content: '';
+      width: 150px;
+      height: 2px;
+      background: $themeColorTwo;
+      position: absolute;
+      transform: translateY(-50%);
+      top: 50%;
+      left: -180px;
+    }
+  }
+}
+
+.block-cases {
+  padding-top: 5%;
+
+  &__wrapper {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 1200px;
+    margin: 60px auto 0;
+
+    &.slick-slider {
+      padding: 5px 40px;
+
+      & .slick-arrow {
+        background: $color_white;
+        box-shadow: $arrow_box_shadow;
+        border: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 40px;
+        height: 40px;
+        padding: 10px;
+        cursor: pointer;
+        position: absolute;
+        box-sizing: border-box;
+        transform: translateY(-50%);
+        top: 50%;
+        z-index: 10;
+        @extend %smooth_animation;
+
+        &:hover, &:focus {
+          @extend %smooth_animation;
+          background: $themeColorTwo;
+
+          & .slick-icon {
+            @extend %smooth_animation;
+            fill: $color_white;
+          }
+        }
+
+        & .slick-icon {
+          display: block;
+          width: 15px;
+          height: 15px;
+          fill: $light_text_color;
+          @extend %smooth_animation;
+        }
+
+        &.slick-prev {
+          left: 0;
+        }
+
+        &.slick-next {
+          right: 0;
+        }
+      }
+    }
+  }
+
+  &__item-wrapper {
+    box-shadow: none;
+    padding: 10px 15px;
+    width: 25%;
+  }
+
+  &__item {
+    box-shadow: $cases_box_shadow;
+    position: relative;
+    width: 100%;
+  }
+
+  &__image {
+    width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+
+  &__caption {
+    background: transparent;
+    width: 100%;
+    height: 100%;
+    max-height: 100px;
+    padding: 0 15px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+  }
+
+  &__item-title {
+    color: $color_white;
+    font-size: 16px;
+    font-weight: 800;
+    margin-bottom: 5px;
   }
 }
