--- a/assets/sass/pages/_home-page.scss
+++ b/assets/sass/pages/_home-page.scss
@@ -253,9 +253,14 @@
   text-align: center;
 }
 
-@media screen and (min-width: 1355px) {
+@media screen and (min-width: 1100px) {
   .main-title {
     text-align: left;
+  }
+}
+
+@media screen and (min-width: 1355px) {
+  .main-title {
 
     &:before {
       content: '';
@@ -335,7 +340,7 @@
   &__item-wrapper {
     box-shadow: none;
     padding: 10px 15px;
-    width: 25%;
+    width: 100%;
   }
 
   &__item {
@@ -367,5 +372,29 @@
     font-size: 16px;
     font-weight: 800;
     margin-bottom: 5px;
+  }
+}
+
+@media screen and (min-width: 575px) {
+  .block-cases {
+    &__item-wrapper {
+      width: 50%;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .block-cases {
+    &__item-wrapper {
+      width: 33.3333333%;
+    }
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .block-cases {
+    &__item-wrapper {
+      width: 25%;
+    }
   }
 }
